--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0"
+  },
+  "engines": {
+    "node": "14.15.1"
   }
 }
