--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "AskYourQueryFreely",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1" ,
+    "dev" : "nodemon app"
   },
   "author": "Prashant Ranjan",
   "license": "ISC",
